# CarRENTAL

./: .gitignore  CMakeLists.txt  README.md  class_diagram.puml  ЗАПУСК_С_ЧИСТОЙ_БД.md  ИНСТРУКЦИЯ.md  ПЕРЕСБОРКА.md  СОДЕРЖАНИЕ.txt
.cache/clangd/index/: CarCardWidget.cpp.2A415AC1F60CB9D2.idx  CarCardWidget.h.55814244A794F480.idx  CarDetailsDialog.cpp.82AFC4F0BE9FE6D2.idx  CarDetailsDialog.h.F33286EE52B8604B.idx  CurrencyConverter.cpp.D7225C4AA0C01B7E.idx  CurrencyConverter.h.BEA69B9294C5A644.idx  CustomCalendarWidget.cpp.30CA5D27AB2EE958.idx  CustomCalendarWidget.h.D8924CB3BB325435.idx  Database.cpp.0779A8EFA6FD1026.idx  Database.h.B39FDAEE6C456DF4.idx  LoginDialog.cpp.A39F051B60D1B959.idx  LoginDialog.h.990946111F784BF1.idx  MainWindow.cpp.732C1274E0D1C073.idx  MainWindow.h.60CBAC426AB6B2C5.idx  (+3 more)
resources/: resources.qrc
src/: CarCardWidget.cpp  CarCardWidget.h  CustomCalendarWidget.cpp  CustomCalendarWidget.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  RentalDialog.cpp  RentalDialog.h  RentalsModel.cpp  RentalsModel.h  main.cpp
src/controllers/: CarsCatalogController.cpp  CarsCatalogController.h
src/db/: CarInfo.h  CarSeeder.cpp  CarSeeder.h  Database.cpp  Database.h  SchemaManager.cpp  SchemaManager.h
src/utils/: CarDetailsFormatter.cpp  CarDetailsFormatter.h  CarImageLoader.cpp  CarImageLoader.h  CurrencyConverter.cpp  CurrencyConverter.h  PathsConfig.cpp  PathsConfig.h  RentalCalculator.cpp  RentalCalculator.h  SessionManager.cpp  SessionManager.h
src/views/: CarCardsView.cpp  CarCardsView.h
ui/: MainWindow.ui
(+6 files in other folders)
